--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 *.class
 *.log
+target
+**/target
+ideatarget
+.target
+bin
+.cache
+.cache-main
+.cache-tests
+.classpath
+.project
+project/project
+project/target
+inc_compile_2.12.zip
+.idea/
